feat: add safe routes
