# src/config/swagger.yaml
@@ -9,6 +9,12 @@ servers:
     description: production server
   - url: http://localhost:5000/api
     description: local server
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
 paths:
   /signup:
     post:
@@ -30,6 +36,8 @@ paths:
                 password:
                   type: string
                 name:
+                  type: string
+                id:
                   type: string
       responses:
         "200":
@@ -53,36 +61,21 @@ paths:
       responses:
         "200":
           description: login successfully
-  /signup:
-    post:
+  /auth/me:
+    get:
       tags:
-        - user
-      requestBody:
-        description: add user
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                avatar:
-                  type: string
-                  format: binary
-                email:
-                  type: string
-                password:
-                  type: string
-                name:
-                  type: string
+        - Auth
+      security:
+        - bearerAuth: []
       responses:
         "200":
-          description: user add
+          description: get user info
   /products:
     get:
       tags:
         - Products
       responses:
-        '200':
+        "200":
           description: get all products info successfully
           content:
             application/json:
@@ -90,21 +83,64 @@ paths:
                 type: array
                 items:
                   type: string
-  /verify:
+  /cart:
     post:
       tags:
-        - Users  
+        - cart
       requestBody:
+        description: add cart details
         required: true
         content:
           application/json:
-            schema: 
-              type: 'object'
+            schema:
+              type: "object"
               properties:
-                  hash:
-                    type: string 
-            example:
-              hash: 45c8866eea81385afa7074306c9e7aed670cbe3c638aefd42ad0689a7b3294e0aa48d44536dd2f2f2fac669480ec41df
+                name:
+                  type: string
+                number:
+                  type: number
+                price:
+                  type: string
+                image:
+                  type: string
+                userId:
+                  type: string
       responses:
-        '200':
-          description: email verified
+        "200":
+          description: Cart detail added successfully
+  /carts:
+    get:
+      tags:
+        - Carts
+      responses:
+        "200":
+          description: get all cart info successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+  # /cart/update:
+  #   put:
+  #     tags:
+  #       - Cart
+  #     requestBody:
+  #       description: update cart
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             type: object
+  #             properties:
+  #               name:
+  #                 type: string
+  #               price:
+  #                 type: string
+  #               number:
+  #                 type: number
+  #               image:
+  #                 type: string
+  #     responses:
+  #       '200':
+  #         description: cart updated
